# testloop

./: .gitignore  Dockerfile  README.md  diag.py  pyproject.toml  test_billing.py  test_example_target.py
.github/workflows/: ci.yml
examples/: buggy_stats.py  example_target.py  metered_billing.py
testloop/: agent.py  cli.py  discovery.py  llm.py  prompts.py  runner.py
tests/: test_agent.py  test_cli.py  test_discovery.py  test_llm.py  test_runner.py
